# ggmusic

./: Cargo.toml  README.md  flake.nix
src/: app.rs  asserts.rs  browse.rs  events.rs  main.rs  menu.rs  playback.rs  playing.rs  root.rs  theme.rs  window.rs
src/metadata/: album.rs  library.rs  mod.rs  track.rs
