[package]
name = "ggmusic"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
lofty = "0.20.0"
id3 = "1.13.1"
anyhow = "1"
env_logger = "0.11.3"
rodio = "0.18.1"
catppuccin = "2.4.0"
log = "0.4.21"
rust-embed = "8.4.0"
image = "0.23"
rayon = "1.10.0"
